# repo-trust

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pylock.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPLETED.md  PLAN.md  PROGRESS.md  adr.md  architecture.md  development-workflow.md  domain-context.md  finding-reference.md  json-report-reference.md  prd.md  testing-and-validation.md  trd.md
examples/: github-actions-repotrust-gate.yml  repotrust.toml
guides/: command-mode-guide.md
src/repotrust/: __init__.py  __main__.py  cli.py  compare_reports.py  config.py  console.py  console_i18n.py  dashboard.py  dashboard_i18n.py  detection.py  evidence.py  finding_catalog.py  help_i18n.py  init_policy.py  install_advice.py  install_audit.py  models.py  next_steps.py  remote.py  remote_markers.py  reports.py  rules.py  sample_gallery.py  scanner.py  scoring.py  targets.py  terminal_theme.py  tutorial.py
tests/: cli_helpers.py  test_cli.py  test_compare_cli.py  test_config.py  test_console_cli.py  test_docs.py  test_install_cli.py  test_policy_cli.py  test_remote.py  test_remote_cli.py  test_scanner.py  test_targets.py
tests/fixtures/repos/good-python/: README.md  SECURITY.md  pyproject.toml
tests/fixtures/repos/good-python/.github/: dependabot.yml
tests/fixtures/repos/good-python/.github/workflows/: ci.yml
tests/fixtures/repos/risky-install/: README.md  pyproject.toml
